--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   
+    <title>PETER WEBSITE</title>
 </head>
 <body>
-    <a href="https://www.google.com/"> <img src="./Tools/Doc/Sample/passport removebg-preview.png" alt="My picture"></a>
+    <a href="https://web.facebook.com/profile.php?id=100090872298425/"> <img src="./Tools/Doc/Sample/passport removebg-preview.png" style="height: 100px; width: 100p;" alt="My picture"></a>
     <table border="1px solid blak" width="100%">
         <tr>
             <th>sn</th>
@@ -18,17 +16,8 @@
             <th>gender</th>
             <th>country</th>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>1</td><input type="text" value="1"></td>
             <td></td>
             <td></td>
             <td></td>
@@ -36,17 +25,8 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>2</td>
             <td></td>
             <td></td>
             <td></td>
@@ -54,17 +34,8 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>3</td>
             <td></td>
             <td></td>
             <td></td>
@@ -72,17 +43,8 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>4</td>
             <td></td>
             <td></td>
             <td></td>
@@ -90,8 +52,44 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr contenteditable="">
+            <td>5</td>
             <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr contenteditable="">
+            <td>6</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr contenteditable="">
+            <td>7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr contenteditable="">
+            <td>8</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr contenteditable="">
+            <td>9</td>
             <td></td>
             <td></td>
             <td></td>
@@ -101,5 +99,19 @@
         </tr>
     </table>
     
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <form action="mailto:peterakanni332@gmail.com">
+    input
+  </form>  
 </body>
 </html>
