--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
    
@@ -17,13 +17,13 @@
             <th>country</th>
         </tr>
         <tr contenteditable="">
-            <td>1</td><input type="text" value="1"></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>1</td>
+            <td>Akanni</td>
+            <td> peterakanni332@gmail.com</td>
+            <td>123</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
             <td>2</td>
@@ -100,7 +100,7 @@
     </table>
     
 </body>
-</html> -->
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -111,7 +111,6 @@
 </head>
 <body>
   <form action="mailto:peterakanni332@gmail.com">
-    input
   </form>  
 </body>
 </html>
