--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
             <th>gender</th>
             <th>country</th>
         </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+           <td>1</td>
+            <td>Akanni</td>
+            <td> peterakanni332@gmail.com</td>
+            <td>123</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
+        </tr>
+               <tr contenteditable="">
+            <td>2</td>
             <td></td>
             <td></td>
             <td></td>
@@ -27,17 +36,8 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>3</td>
             <td></td>
             <td></td>
             <td></td>
@@ -45,17 +45,8 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>4</td>
             <td></td>
             <td></td>
             <td></td>
@@ -63,17 +54,8 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>5</td>
             <td></td>
             <td></td>
             <td></td>
@@ -81,8 +63,8 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
+        <tr contenteditable="">
+            <td>6</td>
             <td></td>
             <td></td>
             <td></td>
@@ -90,8 +72,26 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr contenteditable="">
+            <td>7</td>
             <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr contenteditable="">
+            <td>8</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr contenteditable="">
+            <td>9</td>
             <td></td>
             <td></td>
             <td></td>
@@ -101,5 +101,18 @@
         </tr>
     </table>
     
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <form action="mailto:peterakanni332@gmail.com">
+  </form>  
 </body>
 </html>
