--- a/index.html
+++ b/index.html
@@ -29,75 +29,74 @@
         </tr>
                <tr contenteditable="">
             <td>2</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
             <td>3</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
             <td>4</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+           <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
-            <td>5</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+           <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
             <td>6</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+           <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
             <td>7</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+           <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
             <td>8</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+          <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
         <tr contenteditable="">
             <td>9</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+           <td>Peter</td>
+            <td>Peterakanni332@gmail.com</td>
+            <td>321</td>
+            <td>31</td>
+            <td>male</td>
+            <td>Nigeria</td>
         </tr>
     </table>
     
